--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -947,6 +947,8 @@ video {
   margin-top: 2rem;
 }.mt-auto {
   margin-top: auto;
+}.mr-4 {
+  margin-right: 1rem;
 }.line-clamp-\[--line-clamp\] {
   overflow: hidden;
   display: -webkit-box;
@@ -1020,8 +1022,6 @@ video {
   height: 24rem;
 }.h-\[100dvh\] {
   height: 100dvh;
-}.h-\[30rem\] {
-  height: 30rem;
 }.h-\[40rem\] {
   height: 40rem;
 }.h-\[50rem\] {
@@ -1034,30 +1034,8 @@ video {
   height: 100%;
 }.h-screen {
   height: 100vh;
-}.h-svh {
-  height: 100svh;
-}.h-\[\] {
-  height: ;
-}.h-\[3rem\] {
-  height: 3rem;
-}.h-\[1000rem\] {
-  height: 1000rem;
-}.h-\[70rem\] {
-  height: 70rem;
-}.h-\[30rem\[\]\] {
-  height: 30rem[];
-}.h-\[60rem\] {
-  height: 60rem;
-}.h-\[500rem\] {
-  height: 500rem;
-}.h-\[550rem\] {
-  height: 550rem;
-}.h-\[55rem\] {
-  height: 55rem;
-}.h-\[90rem\] {
-  height: 90rem;
-}.h-\[80rem\] {
-  height: 80rem;
+}.h-\[30rem\] {
+  height: 30rem;
 }.max-h-72 {
   max-height: 18rem;
 }.min-h-full {
@@ -1084,8 +1062,6 @@ video {
   width: 0.5rem;
 }.w-2\.5 {
   width: 0.625rem;
-}.w-2\/4 {
-  width: 50%;
 }.w-20 {
   width: 5rem;
 }.w-3 {
@@ -1127,6 +1103,10 @@ video {
   width: 1px;
 }.w-screen {
   width: 100vw;
+}.w-44 {
+  width: 11rem;
+}.w-\[30px\] {
+  width: 30px;
 }.min-w-0 {
   min-width: 0px;
 }.min-w-\[theme\(spacing\.4\)\] {
@@ -1346,8 +1326,6 @@ video {
   justify-content: center;
 }.justify-between {
   justify-content: space-between;
-}.justify-around {
-  justify-content: space-around;
 }.justify-items-center {
   justify-items: center;
 }.gap-1 {
@@ -1576,9 +1554,6 @@ video {
 }.bg-blue-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(225 239 254 / var(--tw-bg-opacity));
-}.bg-blue-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(195 221 253 / var(--tw-bg-opacity));
 }.bg-blue-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(164 202 254 / var(--tw-bg-opacity));
@@ -1648,16 +1623,10 @@ video {
   --tw-gradient-from: #1E429F var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(30 66 159 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}.from-sky-500 {
-  --tw-gradient-from: #0ea5e9 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(14 165 233 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }.to-blue-600 {
   --tw-gradient-to: #1C64F2 var(--tw-gradient-to-position);
 }.to-gray-300 {
   --tw-gradient-to: #D1D5DB var(--tw-gradient-to-position);
-}.to-indigo-500 {
-  --tw-gradient-to: #6875F5 var(--tw-gradient-to-position);
 }.bg-cover {
   background-size: cover;
 }.bg-clip-text {
@@ -1785,8 +1754,6 @@ video {
   padding-inline-end: 1.5rem;
 }.pe-8 {
   padding-inline-end: 2rem;
-}.pl-11 {
-  padding-left: 2.75rem;
 }.pl-2 {
   padding-left: 0.5rem;
 }.pl-5 {
@@ -1852,9 +1819,6 @@ video {
 }.text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
-}.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
 }.text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1974,6 +1938,8 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }.underline {
   text-decoration-line: underline;
+}.underline-offset-2 {
+  text-underline-offset: 2px;
 }.antialiased {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -1981,8 +1947,6 @@ video {
   opacity: 0;
 }.opacity-100 {
   opacity: 1;
-}.opacity-20 {
-  opacity: 0.2;
 }.opacity-50 {
   opacity: 0.5;
 }.opacity-70 {
@@ -2168,9 +2132,6 @@ video {
 }.hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}.hover\:bg-gray-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }.hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
@@ -2385,12 +2346,12 @@ video {
 }.group:hover .group-hover\:text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
-}.group:hover .group-hover\:text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
 }.group:hover .group-hover\:text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}.group:hover .group-hover\:text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }.group\/item:hover .group-hover\/item\:underline {
   text-decoration-line: underline;
 }.group\/link:hover .group-hover\/link\:underline {
@@ -2695,23 +2656,23 @@ video {
 }.group\/button:hover .dark\:group-hover\/button\:text-gray-400:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}.group:hover .dark\:group-hover\:text-gray-200:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }.group:hover .dark\:group-hover\:text-gray-400:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }.group:hover .dark\:group-hover\:text-white:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}.group:hover .dark\:group-hover\:text-gray-200:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
 }.group:focus .dark\:group-focus\:ring-gray-800\/70:is(.dark *) {
   --tw-ring-color: rgb(31 41 55 / 0.7);
-}.group:focus-visible .dark\:group-focus-visible\:text-gray-400:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
 }.group:focus-visible .dark\:group-focus-visible\:text-gray-200:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
+}.group:focus-visible .dark\:group-focus-visible\:text-gray-400:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }@media not all and (min-width: 1280px) {
 
   .max-xl\:hidden {
@@ -3060,10 +3021,6 @@ video {
     width: 900px;
   }
 
-  .md\:max-w-4xl {
-    max-width: 56rem;
-  }
-
   .md\:columns-\[--cols-md\] {
     -moz-columns: var(--cols-md);
          columns: var(--cols-md);
@@ -3105,11 +3062,6 @@ video {
 
   .md\:rounded-xl {
     border-radius: 0.75rem;
-  }
-
-  .md\:rounded-s-lg {
-    border-start-start-radius: 0.5rem;
-    border-end-start-radius: 0.5rem;
   }
 
   .md\:p-20 {
@@ -3375,8 +3327,6 @@ video {
   flex-direction: row-reverse;
 }.rtl\:space-x-reverse:where([dir="rtl"], [dir="rtl"] *) > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 1;
-}.rtl\:text-right:where([dir="rtl"], [dir="rtl"] *) {
-  text-align: right;
 }@media (min-width: 1024px) {
 
   .rtl\:lg\:-translate-x-0:where([dir="rtl"], [dir="rtl"] *) {
