--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -879,6 +879,8 @@ video {
   margin-inline-start: -0.25rem;
 }.-mt-7 {
   margin-top: -1.75rem;
+}.-mt-px {
+  margin-top: -1px;
 }.mb-1 {
   margin-bottom: 0.25rem;
 }.mb-10 {
@@ -901,10 +903,16 @@ video {
   margin-inline-end: 1rem;
 }.me-6 {
   margin-inline-end: 1.5rem;
+}.ml-1 {
+  margin-left: 0.25rem;
+}.ml-12 {
+  margin-left: 3rem;
 }.ml-2 {
   margin-left: 0.5rem;
 }.ml-3 {
   margin-left: 0.75rem;
+}.ml-4 {
+  margin-left: 1rem;
 }.ml-auto {
   margin-left: auto;
 }.mr-2 {
@@ -937,18 +945,14 @@ video {
   margin-top: 1rem;
 }.mt-6 {
   margin-top: 1.5rem;
-}.mt-auto {
-  margin-top: auto;
-}.-mt-px {
-  margin-top: -1px;
-}.ml-1 {
-  margin-left: 0.25rem;
-}.ml-12 {
-  margin-left: 3rem;
-}.ml-4 {
-  margin-left: 1rem;
 }.mt-8 {
   margin-top: 2rem;
+}.mt-auto {
+  margin-top: auto;
+}.mt-5 {
+  margin-top: 1.25rem;
+}.mr-5 {
+  margin-right: 1.25rem;
 }.line-clamp-\[--line-clamp\] {
   overflow: hidden;
   display: -webkit-box;
@@ -1032,8 +1036,28 @@ video {
   height: 100%;
 }.h-screen {
   height: 100vh;
+}.h-72 {
+  height: 18rem;
+}.h-52 {
+  height: 13rem;
+}.h-\[426px\] {
+  height: 426px;
+}.h-\[326px\] {
+  height: 326px;
+}.h-\[200px\] {
+  height: 200px;
+}.h-\[100px\] {
+  height: 100px;
+}.h-\[300px\] {
+  height: 300px;
+}.h-\[270px\] {
+  height: 270px;
+}.h-\[calc\(100\%-1rem\)\] {
+  height: calc(100% - 1rem);
 }.max-h-72 {
   max-height: 18rem;
+}.max-h-full {
+  max-height: 100%;
 }.min-h-10 {
   min-height: 2.5rem;
 }.min-h-full {
@@ -1400,6 +1424,10 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }.divide-y > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
@@ -1489,6 +1517,12 @@ video {
 }.rounded-t-xl {
   border-top-left-radius: 0.75rem;
   border-top-right-radius: 0.75rem;
+}.rounded-b {
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}.rounded-t {
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
 }.border {
   border-width: 1px;
 }.border-0 {
@@ -1508,12 +1542,12 @@ video {
   border-inline-end-width: 1px;
 }.border-l-4 {
   border-left-width: 4px;
+}.border-r {
+  border-right-width: 1px;
 }.border-s {
   border-inline-start-width: 1px;
 }.border-t {
   border-top-width: 1px;
-}.border-r {
-  border-right-width: 1px;
 }.border-none {
   border-style: none;
 }.border-blue-600 {
@@ -1531,14 +1565,14 @@ video {
 }.border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }.border-indigo-400 {
   --tw-border-opacity: 1;
   border-color: rgb(141 162 251 / var(--tw-border-opacity));
 }.border-transparent {
   border-color: transparent;
-}.border-gray-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }.\!bg-gray-50 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity)) !important;
@@ -1606,6 +1640,15 @@ video {
   background-color: rgb(255 255 255 / 0.05);
 }.bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
+}.bg-green-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(4 108 78 / var(--tw-bg-opacity));
+}.bg-green-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(132 225 188 / var(--tw-bg-opacity));
+}.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 159 110 / var(--tw-bg-opacity));
 }.bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }.from-blue-400 {
@@ -1851,6 +1894,8 @@ video {
   line-height: 1.25rem;
 }.leading-6 {
   line-height: 1.5rem;
+}.leading-7 {
+  line-height: 1.75rem;
 }.leading-9 {
   line-height: 2.25rem;
 }.leading-loose {
@@ -1861,16 +1906,16 @@ video {
   line-height: 1.5;
 }.leading-tight {
   line-height: 1.25;
-}.leading-7 {
-  line-height: 1.75rem;
+}.leading-relaxed {
+  line-height: 1.625;
 }.tracking-tight {
   letter-spacing: -0.025em;
 }.tracking-tighter {
   letter-spacing: -0.05em;
-}.tracking-widest {
-  letter-spacing: 0.1em;
 }.tracking-wider {
   letter-spacing: 0.05em;
+}.tracking-widest {
+  letter-spacing: 0.1em;
 }.text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -2133,6 +2178,9 @@ video {
 }.hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}.hover\:bg-green-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 84 63 / var(--tw-bg-opacity));
 }.hover\:text-blue-600:hover {
   --tw-text-opacity: 1;
   color: rgb(28 100 242 / var(--tw-text-opacity));
@@ -2242,6 +2290,9 @@ video {
 }.focus\:ring-red-500:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(240 82 82 / var(--tw-ring-opacity));
+}.focus\:ring-green-300:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(132 225 188 / var(--tw-ring-opacity));
 }.focus\:ring-offset-0:focus {
   --tw-ring-offset-width: 0px;
 }.focus\:ring-offset-2:focus {
@@ -2322,12 +2373,12 @@ video {
 }.group:hover .group-hover\:text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
-}.group:hover .group-hover\:text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
 }.group:hover .group-hover\:text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}.group:hover .group-hover\:text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }.group\/item:hover .group-hover\/item\:underline {
   text-decoration-line: underline;
 }.group\/link:hover .group-hover\/link\:underline {
@@ -2434,6 +2485,9 @@ video {
   background-color: rgb(255 255 255 / 0.1);
 }.dark\:bg-white\/5:is(.dark *) {
   background-color: rgb(255 255 255 / 0.05);
+}.dark\:bg-green-600:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(5 122 85 / var(--tw-bg-opacity));
 }.dark\:text-blue-300:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(164 202 254 / var(--tw-text-opacity));
@@ -2520,6 +2574,9 @@ video {
   background-color: rgb(255 255 255 / 0.1);
 }.dark\:hover\:bg-white\/5:hover:is(.dark *) {
   background-color: rgb(255 255 255 / 0.05);
+}.dark\:hover\:bg-green-700:hover:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(4 108 78 / var(--tw-bg-opacity));
 }.dark\:hover\:text-blue-500:hover:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(63 131 248 / var(--tw-text-opacity));
@@ -2593,6 +2650,9 @@ video {
 }.dark\:focus\:ring-indigo-600:focus:is(.dark *) {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(88 80 236 / var(--tw-ring-opacity));
+}.dark\:focus\:ring-green-800:focus:is(.dark *) {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(3 84 63 / var(--tw-ring-opacity));
 }.dark\:focus\:ring-offset-gray-800:focus:is(.dark *) {
   --tw-ring-offset-color: #1F2937;
 }.dark\:focus-visible\:bg-white\/5:focus-visible:is(.dark *) {
@@ -2629,23 +2689,23 @@ video {
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }.group:hover .dark\:group-hover\:bg-gray-800\/60:is(.dark *) {
   background-color: rgb(31 41 55 / 0.6);
+}.group:hover .dark\:group-hover\:text-gray-200:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }.group:hover .dark\:group-hover\:text-gray-400:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }.group:hover .dark\:group-hover\:text-white:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}.group:hover .dark\:group-hover\:text-gray-200:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
 }.group:focus .dark\:group-focus\:ring-gray-800\/70:is(.dark *) {
   --tw-ring-color: rgb(31 41 55 / 0.7);
-}.group:focus-visible .dark\:group-focus-visible\:text-gray-400:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
 }.group:focus-visible .dark\:group-focus-visible\:text-gray-200:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
+}.group:focus-visible .dark\:group-focus-visible\:text-gray-400:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }@media not all and (min-width: 1280px) {
 
   .max-xl\:hidden {
@@ -2938,6 +2998,10 @@ video {
   }
 }@media (min-width: 768px) {
 
+  .md\:inset-0 {
+    inset: 0px;
+  }
+
   .md\:bottom-4 {
     bottom: 1rem;
   }
@@ -3039,6 +3103,10 @@ video {
 
   .md\:p-20 {
     padding: 5rem;
+  }
+
+  .md\:p-5 {
+    padding: 1.25rem;
   }
 
   .md\:px-6 {
