--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -752,8 +752,14 @@ video {
   bottom: 0px;
 }.bottom-1\/2 {
   bottom: 50%;
+}.bottom-32 {
+  bottom: 8rem;
 }.bottom-5 {
   bottom: 1.25rem;
+}.bottom-6 {
+  bottom: 1.5rem;
+}.bottom-96 {
+  bottom: 24rem;
 }.bottom-\[60px\] {
   bottom: 60px;
 }.end-0 {
@@ -887,14 +893,20 @@ video {
   margin-bottom: 2.5rem;
 }.mb-2 {
   margin-bottom: 0.5rem;
+}.mb-20 {
+  margin-bottom: 5rem;
 }.mb-3 {
   margin-bottom: 0.75rem;
 }.mb-4 {
   margin-bottom: 1rem;
+}.mb-40 {
+  margin-bottom: 10rem;
 }.mb-5 {
   margin-bottom: 1.25rem;
 }.mb-6 {
   margin-bottom: 1.5rem;
+}.mb-8 {
+  margin-bottom: 2rem;
 }.me-1 {
   margin-inline-end: 0.25rem;
 }.me-2 {
@@ -913,6 +925,8 @@ video {
   margin-left: 0.75rem;
 }.ml-4 {
   margin-left: 1rem;
+}.ml-5 {
+  margin-left: 1.25rem;
 }.ml-auto {
   margin-left: auto;
 }.mr-2 {
@@ -923,8 +937,6 @@ video {
   margin-right: 1.25rem;
 }.ms-2 {
   margin-inline-start: 0.5rem;
-}.ms-2\.5 {
-  margin-inline-start: 0.625rem;
 }.ms-3 {
   margin-inline-start: 0.75rem;
 }.ms-4 {
@@ -939,6 +951,8 @@ video {
   margin-top: 0.125rem;
 }.mt-1 {
   margin-top: 0.25rem;
+}.mt-10 {
+  margin-top: 2.5rem;
 }.mt-2 {
   margin-top: 0.5rem;
 }.mt-3 {
@@ -990,6 +1004,8 @@ video {
   height: 0.5rem;
 }.h-2\.5 {
   height: 0.625rem;
+}.h-2\/3 {
+  height: 66.666667%;
 }.h-20 {
   height: 5rem;
 }.h-3 {
@@ -1024,8 +1040,6 @@ video {
   height: 270px;
 }.h-\[30rem\] {
   height: 30rem;
-}.h-\[40rem\] {
-  height: 40rem;
 }.h-\[50rem\] {
   height: 50rem;
 }.h-\[calc\(100\%-1rem\)\] {
@@ -1096,6 +1110,8 @@ video {
   width: 2rem;
 }.w-9 {
   width: 2.25rem;
+}.w-96 {
+  width: 24rem;
 }.w-\[--sidebar-width\] {
   width: var(--sidebar-width);
 }.w-\[30px\] {
@@ -1359,6 +1375,9 @@ video {
 }.gap-x-1 {
   -moz-column-gap: 0.25rem;
        column-gap: 0.25rem;
+}.gap-x-10 {
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
 }.gap-x-2 {
   -moz-column-gap: 0.5rem;
        column-gap: 0.5rem;
@@ -1479,9 +1498,6 @@ video {
 }.rounded-b {
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
-}.rounded-b-3xl {
-  border-bottom-right-radius: 1.5rem;
-  border-bottom-left-radius: 1.5rem;
 }.rounded-b-xl {
   border-bottom-right-radius: 0.75rem;
   border-bottom-left-radius: 0.75rem;
@@ -1506,9 +1522,6 @@ video {
 }.rounded-t {
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
-}.rounded-t-3xl {
-  border-top-left-radius: 1.5rem;
-  border-top-right-radius: 1.5rem;
 }.rounded-t-lg {
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
@@ -1645,23 +1658,14 @@ video {
   background-color: rgb(253 246 178 / var(--tw-bg-opacity));
 }.bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}.from-blue-400 {
-  --tw-gradient-from: #76A9FA var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(118 169 250 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }.from-blue-800 {
   --tw-gradient-from: #1E429F var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(30 66 159 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }.to-blue-600 {
   --tw-gradient-to: #1C64F2 var(--tw-gradient-to-position);
-}.to-gray-300 {
-  --tw-gradient-to: #D1D5DB var(--tw-gradient-to-position);
 }.bg-cover {
   background-size: cover;
-}.bg-clip-text {
-  -webkit-background-clip: text;
-          background-clip: text;
 }.bg-center {
   background-position: center;
 }.fill-current {
@@ -1678,6 +1682,8 @@ video {
   padding: 0.25rem;
 }.p-10 {
   padding: 2.5rem;
+}.p-16 {
+  padding: 4rem;
 }.p-2 {
   padding: 0.5rem;
 }.p-2\.5 {
@@ -1762,6 +1768,8 @@ video {
 }.py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}.pb-10 {
+  padding-bottom: 2.5rem;
 }.pb-2 {
   padding-bottom: 0.5rem;
 }.pb-5 {
@@ -1784,12 +1792,16 @@ video {
   padding-inline-end: 1.5rem;
 }.pe-8 {
   padding-inline-end: 2rem;
+}.pl-10 {
+  padding-left: 2.5rem;
 }.pl-2 {
   padding-left: 0.5rem;
 }.pl-5 {
   padding-left: 1.25rem;
 }.pl-7 {
   padding-left: 1.75rem;
+}.pr-10 {
+  padding-right: 2.5rem;
 }.pr-5 {
   padding-right: 1.25rem;
 }.pr-7 {
@@ -1812,6 +1824,8 @@ video {
   padding-top: 0.25rem;
 }.pt-2 {
   padding-top: 0.5rem;
+}.pt-20 {
+  padding-top: 5rem;
 }.pt-6 {
   padding-top: 1.5rem;
 }.pt-8 {
@@ -1843,12 +1857,12 @@ video {
 }.text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
-}.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }.text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }.text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1921,9 +1935,6 @@ video {
 }.text-blue-800 {
   --tw-text-opacity: 1;
   color: rgb(30 66 159 / var(--tw-text-opacity));
-}.text-blue-900 {
-  --tw-text-opacity: 1;
-  color: rgb(35 56 118 / var(--tw-text-opacity));
 }.text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -1968,8 +1979,6 @@ video {
 }.text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(224 36 36 / var(--tw-text-opacity));
-}.text-transparent {
-  color: transparent;
 }.text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -2051,6 +2060,9 @@ video {
   --tw-ring-opacity: 0.05;
 }.blur {
   --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}.grayscale {
+  --tw-grayscale: grayscale(100%);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }.filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -2146,6 +2158,9 @@ video {
 }.hover\:bg-blue-200:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(195 221 253 / var(--tw-bg-opacity));
+}.hover\:bg-blue-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(164 202 254 / var(--tw-bg-opacity));
 }.hover\:bg-blue-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(28 100 242 / var(--tw-bg-opacity));
@@ -2212,8 +2227,9 @@ video {
 }.hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}.hover\:underline:hover {
-  text-decoration-line: underline;
+}.hover\:grayscale-0:hover {
+  --tw-grayscale: grayscale(0);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }.focus\:z-10:focus {
   z-index: 10;
 }.focus\:border-blue-300:focus {
@@ -2636,6 +2652,9 @@ video {
 }.dark\:focus\:ring-blue-800:focus:is(.dark *) {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(30 66 159 / var(--tw-ring-opacity));
+}.dark\:focus\:ring-blue-900:focus:is(.dark *) {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(35 56 118 / var(--tw-ring-opacity));
 }.dark\:focus\:ring-gray-600:focus:is(.dark *) {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(75 85 99 / var(--tw-ring-opacity));
@@ -2725,6 +2744,10 @@ video {
   .sm\:mx-auto {
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .sm\:ms-4 {
+    margin-inline-start: 1rem;
   }
 
   .sm\:ms-auto {
@@ -2890,6 +2913,12 @@ video {
          column-gap: 1rem;
   }
 
+  .sm\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
   .sm\:rounded-lg {
     border-radius: 0.5rem;
   }
@@ -2914,6 +2943,11 @@ video {
   .sm\:px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
+  }
+
+  .sm\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
   }
 
   .sm\:px-6 {
@@ -3042,8 +3076,16 @@ video {
     height: auto;
   }
 
+  .md\:w-60 {
+    width: 15rem;
+  }
+
   .md\:w-72 {
     width: 18rem;
+  }
+
+  .md\:w-\[600px\] {
+    width: 600px;
   }
 
   .md\:w-\[900px\] {
@@ -3191,18 +3233,38 @@ video {
     background-color: transparent;
   }
 
+  .lg\:px-48 {
+    padding-left: 12rem;
+    padding-right: 12rem;
+  }
+
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:py-16 {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
   }
 
   .lg\:pe-8 {
     padding-inline-end: 2rem;
   }
 
-  .lg\:text-7xl {
-    font-size: 4.5rem;
+  .lg\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .lg\:text-8xl {
+    font-size: 6rem;
     line-height: 1;
+  }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .lg\:shadow-none {
@@ -3268,24 +3330,20 @@ video {
     display: none;
   }
 
-  .xl\:w-2\/5 {
-    width: 40%;
+  .xl\:w-1\/4 {
+    width: 25%;
   }
 
-  .xl\:w-2\/6 {
-    width: 33.333333%;
+  .xl\:w-2\/5 {
+    width: 40%;
   }
 
   .xl\:w-3\/5 {
     width: 60%;
   }
 
-  .xl\:w-5\/6 {
-    width: 83.333333%;
-  }
-
-  .xl\:w-full {
-    width: 100%;
+  .xl\:w-4\/5 {
+    width: 80%;
   }
 
   .xl\:columns-\[--cols-xl\] {
@@ -3304,6 +3362,10 @@ video {
 
   .\32xl\:col-start-\[--col-start-2xl\] {
     grid-column-start: var(--col-start-2xl);
+  }
+
+  .\32xl\:flex {
+    display: flex;
   }
 
   .\32xl\:table-cell {
@@ -3353,13 +3415,12 @@ video {
 }.rtl\:rotate-180:where([dir="rtl"], [dir="rtl"] *) {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}.rtl\:rotate-\[270deg\]:where([dir="rtl"], [dir="rtl"] *) {
-  --tw-rotate: 270deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.rtl\:flex-row-reverse:where([dir="rtl"], [dir="rtl"] *) {
   flex-direction: row-reverse;
 }.rtl\:space-x-reverse:where([dir="rtl"], [dir="rtl"] *) > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 1;
+}.rtl\:text-right:where([dir="rtl"], [dir="rtl"] *) {
+  text-align: right;
 }@media (min-width: 1024px) {
 
   .rtl\:lg\:-translate-x-0:where([dir="rtl"], [dir="rtl"] *) {
