--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -960,8 +960,6 @@ video {
   margin: -0.75rem;
 }.-m-3\.5 {
   margin: -0.875rem;
-}.m-0 {
-  margin: 0px;
 }.-mx-2 {
   margin-left: -0.5rem;
   margin-right: -0.5rem;
@@ -992,9 +990,6 @@ video {
 }.my-auto {
   margin-top: auto;
   margin-bottom: auto;
-}.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
 }.-mb-4 {
   margin-bottom: -1rem;
 }.-mb-px {
@@ -1051,8 +1046,6 @@ video {
   margin-left: 1rem;
 }.ml-5 {
   margin-left: 1.25rem;
-}.ml-8 {
-  margin-left: 2rem;
 }.ml-auto {
   margin-left: auto;
 }.mr-2 {
@@ -1063,8 +1056,6 @@ video {
   margin-right: 1.25rem;
 }.mr-7 {
   margin-right: 1.75rem;
-}.mr-8 {
-  margin-right: 2rem;
 }.ms-1 {
   margin-inline-start: 0.25rem;
 }.ms-2 {
@@ -1093,14 +1084,18 @@ video {
   margin-top: 0.75rem;
 }.mt-4 {
   margin-top: 1rem;
-}.mt-5 {
-  margin-top: 1.25rem;
 }.mt-6 {
   margin-top: 1.5rem;
 }.mt-8 {
   margin-top: 2rem;
 }.mt-auto {
   margin-top: auto;
+}.mt-5 {
+  margin-top: 1.25rem;
+}.mb-\[10rem\] {
+  margin-bottom: 10rem;
+}.mb-\[5rem\] {
+  margin-bottom: 5rem;
 }.line-clamp-\[--line-clamp\] {
   overflow: hidden;
   display: -webkit-box;
@@ -1132,16 +1127,12 @@ video {
   height: 0.375rem;
 }.h-1\/2 {
   height: 50%;
-}.h-1\/3 {
-  height: 33.333333%;
 }.h-1\/5 {
   height: 20%;
 }.h-10 {
   height: 2.5rem;
 }.h-11 {
   height: 2.75rem;
-}.h-12 {
-  height: 3rem;
 }.h-14 {
   height: 3.5rem;
 }.h-16 {
@@ -1168,6 +1159,8 @@ video {
   height: 1rem;
 }.h-4\/5 {
   height: 80%;
+}.h-40 {
+  height: 10rem;
 }.h-5 {
   height: 1.25rem;
 }.h-5\/6 {
@@ -1176,14 +1169,14 @@ video {
   height: 14rem;
 }.h-6 {
   height: 1.5rem;
-}.h-60 {
-  height: 15rem;
 }.h-7 {
   height: 1.75rem;
 }.h-72 {
   height: 18rem;
 }.h-8 {
   height: 2rem;
+}.h-80 {
+  height: 20rem;
 }.h-9 {
   height: 2.25rem;
 }.h-96 {
@@ -1194,8 +1187,6 @@ video {
   height: 270px;
 }.h-\[30rem\] {
   height: 30rem;
-}.h-\[4rem\] {
-  height: 4rem;
 }.h-\[50rem\] {
   height: 50rem;
 }.h-\[calc\(100\%-1rem\)\] {
@@ -1208,10 +1199,6 @@ video {
   height: 100%;
 }.h-screen {
   height: 100vh;
-}.h-80 {
-  height: 20rem;
-}.h-40 {
-  height: 10rem;
 }.max-h-72 {
   max-height: 18rem;
 }.max-h-full {
@@ -1236,6 +1223,8 @@ video {
   width: 2.5rem;
 }.w-11 {
   width: 2.75rem;
+}.w-14 {
+  width: 3.5rem;
 }.w-16 {
   width: 4rem;
 }.w-2 {
@@ -1246,8 +1235,6 @@ video {
   width: 40%;
 }.w-20 {
   width: 5rem;
-}.w-28 {
-  width: 7rem;
 }.w-3 {
   width: 0.75rem;
 }.w-3\.5 {
@@ -1276,14 +1263,14 @@ video {
   width: 1.75rem;
 }.w-8 {
   width: 2rem;
+}.w-80 {
+  width: 20rem;
 }.w-9 {
   width: 2.25rem;
 }.w-96 {
   width: 24rem;
 }.w-\[--sidebar-width\] {
   width: var(--sidebar-width);
-}.w-\[10rem\] {
-  width: 10rem;
 }.w-\[21rem\] {
   width: 21rem;
 }.w-\[27rem\] {
@@ -1303,10 +1290,6 @@ video {
   width: 1px;
 }.w-screen {
   width: 100vw;
-}.w-80 {
-  width: 20rem;
-}.w-14 {
-  width: 3.5rem;
 }.min-w-0 {
   min-width: 0px;
 }.min-w-\[theme\(spacing\.4\)\] {
@@ -1502,8 +1485,6 @@ video {
   grid-template-columns: repeat(auto-fit,minmax(0,1fr));
 }.grid-rows-\[1fr_auto_1fr\] {
   grid-template-rows: 1fr auto 1fr;
-}.grid-rows-\[35px_repeat\(6\2c 1fr\)\] {
-  grid-template-rows: 35px repeat(6,1fr);
 }.flex-row {
   flex-direction: row;
 }.flex-row-reverse {
@@ -1577,9 +1558,6 @@ video {
 }.gap-x-6 {
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
-}.gap-x-80 {
-  -moz-column-gap: 20rem;
-       column-gap: 20rem;
 }.gap-y-1 {
   row-gap: 0.25rem;
 }.gap-y-10 {
@@ -1674,8 +1652,6 @@ video {
   white-space: nowrap;
 }.rounded {
   border-radius: 0.25rem;
-}.rounded-2xl {
-  border-radius: 1rem;
 }.rounded-full {
   border-radius: 9999px;
 }.rounded-lg {
@@ -1721,9 +1697,6 @@ video {
   border-width: 1px;
 }.border-0 {
   border-width: 0px;
-}.border-x-\[0\.5px\] {
-  border-left-width: 0.5px;
-  border-right-width: 0.5px;
 }.border-y {
   border-top-width: 1px;
   border-bottom-width: 1px;
@@ -1789,6 +1762,8 @@ video {
 }.bg-blue-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(164 202 254 / var(--tw-bg-opacity));
+}.bg-blue-400\/30 {
+  background-color: rgb(118 169 250 / 0.3);
 }.bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(63 131 248 / var(--tw-bg-opacity));
@@ -1854,11 +1829,6 @@ video {
 }.bg-yellow-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(253 246 178 / var(--tw-bg-opacity));
-}.bg-yellow-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(227 160 8 / var(--tw-bg-opacity));
-}.bg-blue-400\/30 {
-  background-color: rgb(118 169 250 / 0.3);
 }.bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }.from-blue-800 {
@@ -1977,8 +1947,6 @@ video {
   padding-bottom: 3.5rem;
 }.pb-2 {
   padding-bottom: 0.5rem;
-}.pb-4 {
-  padding-bottom: 1rem;
 }.pb-5 {
   padding-bottom: 1.25rem;
 }.pb-6 {
@@ -2007,14 +1975,14 @@ video {
   padding-left: 2.5rem;
 }.pl-2 {
   padding-left: 0.5rem;
+}.pl-20 {
+  padding-left: 5rem;
 }.pl-5 {
   padding-left: 1.25rem;
 }.pl-7 {
   padding-left: 1.75rem;
 }.pr-10 {
   padding-right: 2.5rem;
-}.pr-4 {
-  padding-right: 1rem;
 }.pr-5 {
   padding-right: 1.25rem;
 }.pr-7 {
@@ -2041,16 +2009,12 @@ video {
   padding-top: 0.5rem;
 }.pt-20 {
   padding-top: 5rem;
-}.pt-4 {
-  padding-top: 1rem;
 }.pt-5 {
   padding-top: 1.25rem;
 }.pt-6 {
   padding-top: 1.5rem;
 }.pt-8 {
   padding-top: 2rem;
-}.pl-20 {
-  padding-left: 5rem;
 }.text-left {
   text-align: left;
 }.text-center {
@@ -2360,12 +2324,8 @@ video {
 }.before\:w-0\.5::before {
   content: var(--tw-content);
   width: 0.125rem;
-}.first\:border-s-0:first-child {
-  border-inline-start-width: 0px;
 }.first\:border-t-0:first-child {
   border-top-width: 0px;
-}.last\:border-e-0:last-child {
-  border-inline-end-width: 0px;
 }.first-of-type\:ps-1:first-of-type {
   padding-inline-start: 0.25rem;
 }.last-of-type\:pe-1:last-of-type {
@@ -2408,6 +2368,9 @@ video {
 }.hover\:bg-blue-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(30 66 159 / var(--tw-bg-opacity));
+}.hover\:bg-blue-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(35 56 118 / var(--tw-bg-opacity));
 }.hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -2431,12 +2394,14 @@ video {
 }.hover\:bg-red-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(240 82 82 / var(--tw-bg-opacity));
+}.hover\:bg-transparent:hover {
+  background-color: transparent;
 }.hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}.hover\:bg-blue-900:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(35 56 118 / var(--tw-bg-opacity));
+}.hover\:text-blue-400:hover {
+  --tw-text-opacity: 1;
+  color: rgb(118 169 250 / var(--tw-text-opacity));
 }.hover\:text-blue-600:hover {
   --tw-text-opacity: 1;
   color: rgb(28 100 242 / var(--tw-text-opacity));
@@ -2469,9 +2434,6 @@ video {
 }.hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}.hover\:text-blue-400:hover {
-  --tw-text-opacity: 1;
-  color: rgb(118 169 250 / var(--tw-text-opacity));
 }.hover\:grayscale-0:hover {
   --tw-grayscale: grayscale(0);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -2554,8 +2516,6 @@ video {
   --tw-ring-offset-width: 0px;
 }.focus\:ring-offset-2:focus {
   --tw-ring-offset-width: 2px;
-}.focus-visible\:z-10:focus-visible {
-  z-index: 10;
 }.focus-visible\:bg-gray-100:focus-visible {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -2627,17 +2587,8 @@ video {
 }.disabled\:checked\:text-gray-400:checked:disabled {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
-}.group\/item:first-child .group-first\/item\:rounded-s-lg {
-  border-start-start-radius: 0.5rem;
-  border-end-start-radius: 0.5rem;
-}.group\/item:last-child .group-last\/item\:rounded-e-lg {
-  border-start-end-radius: 0.5rem;
-  border-end-end-radius: 0.5rem;
 }.group:hover .group-hover\:bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
-}.group\/button:hover .group-hover\/button\:text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
 }.group:hover .group-hover\:text-blue-800 {
   --tw-text-opacity: 1;
   color: rgb(30 66 159 / var(--tw-text-opacity));
@@ -2664,12 +2615,12 @@ video {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}.group:focus .group-focus\:ring-white {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
 }.group:focus .group-focus\:ring-blue-400 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(118 169 250 / var(--tw-ring-opacity));
+}.group:focus .group-focus\:ring-white {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
 }.group:focus-visible .group-focus-visible\:text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -2770,6 +2721,9 @@ video {
 }.dark\:text-blue-300:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(164 202 254 / var(--tw-text-opacity));
+}.dark\:text-blue-400:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(118 169 250 / var(--tw-text-opacity));
 }.dark\:text-blue-500:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(63 131 248 / var(--tw-text-opacity));
@@ -2811,12 +2765,6 @@ video {
 }.dark\:text-white:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}.dark\:text-black:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}.dark\:text-blue-400:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(118 169 250 / var(--tw-text-opacity));
 }.dark\:ring-gray-400\/20:is(.dark *) {
   --tw-ring-color: rgb(156 163 175 / 0.2);
 }.dark\:ring-gray-50\/10:is(.dark *) {
@@ -2977,9 +2925,6 @@ video {
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }.group:hover .dark\:group-hover\:bg-gray-800\/60:is(.dark *) {
   background-color: rgb(31 41 55 / 0.6);
-}.group\/button:hover .dark\:group-hover\/button\:text-gray-400:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
 }.group:hover .dark\:group-hover\:text-gray-200:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -3348,8 +3293,8 @@ video {
     display: none;
   }
 
-  .md\:h-60 {
-    height: 15rem;
+  .md\:h-40 {
+    height: 10rem;
   }
 
   .md\:h-\[35rem\] {
@@ -3358,10 +3303,6 @@ video {
 
   .md\:h-auto {
     height: auto;
-  }
-
-  .md\:h-40 {
-    height: 10rem;
   }
 
   .md\:w-1\/4 {
@@ -3691,12 +3632,12 @@ video {
     gap: 2.5rem;
   }
 
-  .xl\:p-20 {
-    padding: 5rem;
-  }
-
   .xl\:p-10 {
     padding: 2.5rem;
+  }
+
+  .xl\:p-20 {
+    padding: 5rem;
   }
 
   .xl\:p-5 {
